<resources>
    <string name="app_name">Save Together</string>
    <string name="app_name_double_line">Save\nTogether</string>
    <string name="team_name">Save Yours World</string>
    <string name="facebook_application_id">463835870676974</string>
    <string name="fb_login_protocol_scheme">fb463835870676974</string>
    <string name="facebook_redirect_link">https://save-together.firebaseapp.com/__/auth/handler</string>
    <string name="google_maps_key">AIzaSyD4sETSGazkNaeNOZiQsXetvl9C24NlJkw</string>
    <string name="app_message_user_gmail">User Gmail Account</string>
    <string name="app_message_username">Username</string>
    <string name="app_message_with_email">Sign up with email</string>
    <string name="app_message_im_the_restaurant">I\'m the restaurant</string>
    <string name="app_message_im_consumer">I\'m consumer</string>
    <string name="app_message_im_the_restaurant_double_line">I\'m the\nrestaurant</string>
    <string name="app_message_im_consumer_double_line">I\'m\nconsumer</string>
    <string name="app_message_sign_up_success">Sign up successfully</string>
    <string name="app_message_phone_number">Phone number</string>
    <string name="app_message_verify_code">Verify code</string>
    <string name="app_message_send">Send</string>
    <string name="app_message_re_send">Re Send</string>
    <string name="app_message_verify">Verify</string>
    <string name="app_message_welcome">Welcome </string>
    <string name="app_message_sign_in_with_facebook_coming">Sign in with Facebook coming soon</string>
    <string name="app_message_coming_soon">Coming soon</string>
    <string name="err_message_required">Required</string>
    <string name="err_message_connection_failure">Network connection error \n Please check your connection</string>
    <string name="err_unknown">Unknown</string>
    <string name="err_">Error</string>
    <string name="err_warning">Warning</string>
    <string name="err_unknown_error">Something wrong! That\'s all we know.</string>
    <string name="err_connection_error">Connection error</string>
    <string name="err_google_play_error">Google Play service error</string>
    <string name="err_sign_up_failure">Something wrong, Sign up failure</string>
    <string name="err_invalid_phone_code">Invalid code!</string>
    <string name="err_invalid_phone_number">Invalid phone number.</string>
    <string name="err_phone_sign_up_quota_exceeded">The quota of sign up with phone number is exceeded. Please continue with orther way or try again on next day.</string>
    <string name="err_only_number_require">Only number</string>
    <string name="app_message_request_permission_call">Please allow us to make a Call</string>
    <string name="app_message_permission_denied">Permission denied</string>
    <string name="app_message_connected_via_wifi">Connection property on WIFI</string>
    <string name="app_message_connected_via_mobile_network">Connection property on MOBILE Data, Remember data charges may apply</string>
    <string name="app_message_back">Back</string>
    <string name="app_message_next">Next</string>
    <string name="app_message_close">Close</string>
    <string name="app_message_retry">Retry</string>
    <string name="app_message_ok">OK</string>
    <string name="app_message_cancel">Cancel</string>
    <string name="app_message_confirm_to_close_app">Press back again to close</string>
    <string name="app_message_dismiss">Dismiss</string>
    <string name="app_message_message">Message</string>
    <string name="app_message_yes">Yes</string>
    <string name="app_message_no">No</string>
    <string name="app_message_call">Call</string>
    <string name="app_message_app_language">Application language is : </string>
    <string name="app_message_language">language</string>
    <string name="app_message_connecting">Connecting . .</string>
    <string name="app_message_one_moment">One moment . .</string>
    <string name="app_message_signing_in">Signing in . .</string>
    <string name="app_message_verifying">Verifying . .</string>
    <string name="app_message_not_account_yet">No account yet?  <b><i>Create one</i></b></string>
    <string name="app_message_back_to_start">Select user type again</string>
    <string name="app_message_must_be_6">The verify code must be 6 digit.</string>
    <string name="prompt_email">Email</string>
    <string name="app_message_password">Password</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_re_password">Confirm Password</string>
    <string name="app_message_sign_up">Sign up</string>
    <string name="app_message_sign_in">Sign in</string>
    <string name="app_message_sign_out">sign out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_re_password">Your password and confirmation password doesn\'t match.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="language_thailand"> ภาษาไทย</string>
    <string name="language_english"> English</string>
    <string name="main_title_store">Store</string>
    <string name="main_title_review">Review</string>
    <string name="main_title_near_by">Near By</string>
    <string name="main_title_favorite">Favorite</string>
    <string name="main_title_profile">Profile</string>
    <string name="main_title_sale">Sale</string>
    <string name="main_title_history">History</string>
    <string name="main_title_menu">Menu</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="title_activity_sign_in_selection">Sign in with Email</string>
    <string name="title_activity_email_register">Register with Email</string>
    <string name="title_activity_phone_sign_in">Continue with Phone number</string>
    <string name="title_activity_customer_main">Main for Customer</string>
    <string name="title_activity_restaurant_main">Main for Restaurant</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="app_message_end_sale">End sale time : </string>
    <string name="title_activity_maps">Map</string>
    <string name="app_message_new_sale">New Sale</string>
    <string name="app_shop_name">Shop name</string>
    <string name="app_shop_detail">Here\'s a detail!</string>
    <string name="app_date_please_select">Please Select date</string>
    <string name="app_message_selling">Selling...</string>
    <string name="app_message_sale_done">The product is now on the market</string>
    <string name="app_message_product_name">Here\'s a product name</string>
    <string name="app_message_product_full_price">Here\'s a full price</string>
    <string name="app_message_product_new_price">Here\'s a new price</string>
    <string name="app_message_product_count">Here\'s a number of product</string>
    <string name="app_message_product_detail">Here\'s a detail</string>
    <string name="title_activity_user_profile">UserProfile</string>
</resources>