<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/res_navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/main_title_home" />

    <item
        android:id="@+id/res_navigation_review"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/main_title_review" />

    <item
        android:id="@+id/res_navigation_my_sale"
        android:icon="@drawable/ic_local_dining_black_24dp"
        android:title="@string/main_title_sale" />

    <item
        android:id="@+id/res_navigation_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/main_title_history" />

    <item
        android:id="@+id/res_navigation_profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/main_title_profile" />
</menu>
