<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/cus_navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/main_title_home" />

    <item
        android:id="@+id/cus_navigation_review"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/main_title_review" />

    <item
        android:id="@+id/cus_navigation_near_by"
        android:icon="@drawable/ic_near_by_black_24dp"
        android:title="@string/main_title_near_by" />

    <item
        android:id="@+id/cus_navigation_favorite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/main_title_favorite" />

    <item
        android:id="@+id/cus_navigation_profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/main_title_profile" />

</menu>
