<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/linear_email_sign_in"
    tools:context="me.srichomthong.savetogether.center.EmailSignInActivity">

    <RelativeLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/email_sign_app_logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/email_sign_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_sign_app_logo"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_message_im_consumer"
            android:textSize="25sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_sign_title">

            <AutoCompleteTextView
                android:id="@+id/email_sign_in_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                style="@style/button_round_style"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilemail">

            <EditText
                android:id="@+id/email_sign_in_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/app_message_sign_in"
                android:imeOptions="actionUnspecified"
                style="@style/button_round_style"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/tilpassword"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/app_message_sign_in"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email_reg_text_btn"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_sign_in_button"
            android:layout_weight="1"
            android:padding="15dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/app_message_not_account_yet"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/txt_email_sign_in_back"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:text="@string/app_message_back"
            android:textSize="18sp" />

    </RelativeLayout>
</LinearLayout>
