<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSilver"
    tools:context="me.srichomthong.savetogether.restaurant.NewSaleActivity">

    <TextView
        android:id="@+id/txt_new_sale_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:text="@string/app_message_new_sale" />

    <TextView
        android:id="@+id/sale_name_title"
        android:layout_below="@+id/txt_new_sale_title"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_shop_name"/>

    <EditText
        android:id="@+id/sale_item_name"
        android:layout_below="@+id/sale_name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/app_name"
        android:maxLines="1"
        android:background="@drawable/custom_border_square"
        android:layout_alignStart="@+id/field_body" />

    <EditText
        android:id="@+id/field_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sale_item_name"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp"
        android:hint="@string/dialog_default_title"
        android:inputType="textMultiLine"
        android:textAlignment="textStart"
        android:background="@drawable/custom_border_square"
        android:maxLines="10"
        android:minLines="4"
        android:scrollHorizontally="false" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_submit_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_plus"/>

</RelativeLayout>
